Correctly align date in week icon

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -294,9 +294,12 @@
 
 #collection_today > a > span.date {
 	position: absolute;
-	font-size: 7px;
-	left: 18px;
-	top: 1.5px;
+	font-size: 6px;
+	left: 17px;
+	top: 2px;
+	width: 10px;
+	text-align: center;
+	font-weight: bold;
 }
 
 #app-settings .label-container span.icon {
